# pyreflect

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py  setup.sh
PyReflect/cli/: main.py
PyReflect/models/: autoencoder.py  mlp.py
PyReflect/tests/: test1.py
datasets/: README.md  combined_expt_denoised_nr.npy  combined_nr.npy  combined_sld.npy  normalization_stat.npy  readme.md
docs/: usage.md
examples/: example_notebook_PCA_NR_check.ipynb  example_notebook_SLD_prediction.ipynb  example_notebook_autoencoder.ipynb  example_notebook_generate_training_datasets.ipynb  example_reflectivity_pipeline.ipynb  example_reflectivity_pipeline_for_experimental_datasets.ipynb  reflectivity_pipeline.ipynb  reflectivity_pipeline_experimental.ipynb  reflectivity_pipeline_experimental_125k.ipynb
examples/.ipynb_checkpoints/: example_notebook_autoencoder-checkpoint.ipynb
experiments/: README.md  train_best_model_modal.py  train_modal.py
hyperparam_search/: README.md  config.yml  hyperparam_search.py  optuna_modal.py  optuna_search.py
pyreflect/: __main__.py
pyreflect/cli/: __init__.py  index.py  init_content.py  initialize.py  main.py
pyreflect/config/: errors.py  load_config.py
pyreflect/data_processor/: __init__.py  data_processor.py  reflectivity_data_generator.py
pyreflect/example_notebooks/: example_notebook_PCA_NR_check.ipynb  example_notebook_SLD_prediction.ipynb  example_notebook_autoencoder.ipynb  example_notebook_autoencoder_generate_curves.ipynb  example_notebook_generate_training_datasets.ipynb  example_notebook_nr_predict_sld_profile_cnn.ipynb  example_notebook_pyreflect_sld_profile_prediction.ipynb
pyreflect/flows/: __init__.py  nr_pred_sld_profile.py  nr_predict_sld.py  predict_expt_chi_labels.py  run_chi_prediction.py  run_sld_prediction.py  sld_profile_pred_chi.py  train_autoencoder_mlp_chi_pred.py
pyreflect/input/: __init__.py  data_processor.py  reflectivity_data_generator.py
pyreflect/models/: __init__.py  autoencoder.py  chi_pred_model_trainer.py  cnn.py  config.py  mlp.py  model_trainer.py  nr_sld_model_trainer.py
pyreflect/models/nr_sld_predictor/: config.py  inference.py  train.py  trainer.py
runs/: reflectivity_pipeline_experimental_125k_6L_0.087D.ipynb  reflectivity_pipeline_experimental_30k_6L_0.107D.ipynb
src/pyreflect/: __init__.py  __main__.py
src/pyreflect/cli/: init_content.py  initialize.py  main.py
src/pyreflect/config/: __init__.py  load_config.py  runtime.py
src/pyreflect/input/: data_processor.py  reflectivity_data_generator.py
src/pyreflect/models/: __init__.py  autoencoder.py  chi_pred_model_trainer.py  cnn.py  config.py  mlp.py  model_trainer.py  nr_sld_model_trainer.py
src/pyreflect/pipelines/: __init__.py  helper.py  inference.py  reflectivity_pipeline.py  run_chi_prediction.py  run_sld_prediction.py  sld_profile_pred_chi.py  train_autoencoder_mlp_chi_pred.py
