[tool.poetry]
name = "pyreflect"
version = "1.4.1"
description = "The package tool for neutron reflectivity analysis"
authors = ["Yuqing Qiao <qiao.yuqi@northeastern.edu>"]
license = "MIT"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.11.0.86"
torch = "2.5.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
scipy = "^1.15.1"
typer = "^0.15.1"
pyyaml = "^6.0.2"
llvmlite = ">=0.44.0"
numba = ">=0.61.0"
refl1d = { version = "^1.0.0a0", allow-prereleases = true }
numpy = "2.1.0"
refnx = "*"
tqdm = "^4.67.1"
allpairspy = "^2.5.1"

[[tool.poetry.packages]]
include = "pyreflect"
from = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pyreflect"
version = "1.4.1"
authors = [
  { name="Yuqing Qiao", email="qiao.yuqi@northeastern.edu" },
]
description = "The package tool for neutron reflectivity analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/williamQyq/pyreflect"
Issues = "https://github.com/williamQyq/pyreflect/issues"